--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 h1 {
     color: black;
-    font-size: 40px;
-    text-align: center
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 8px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font: bold;
+    padding: 0%;
+    margin-top: -5px;
 }
 h2 {
     color: black;
     font-size: 25px;
-    text-align: center
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: -30px;
 }
 body {
     background-color: beige;
