--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    color: black;
+    color: white;
     font-size: 60px;
     text-align: center;
     letter-spacing: 8px;
@@ -9,7 +9,7 @@ h1 {
     margin-top: -5px;
 }
 h2 {
-    color: black;
+    color: white;
     font-size: 25px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,4 +17,50 @@ h2 {
 }
 body {
     background-color: beige;
+}
+p {
+    text-align: center;
+    padding-top: 4%;
+    color: white;
+}
+a {
+    color:blue;
+}
+p2 {
+    font-size: large;
+    letter-spacing: 2px;
+    position:relative;
+    top: -425px;
+    color: white;
+}
+p3 {
+    position:relative;
+    left: -500px;
+    top: -425px;
+    color: white;
+}
+h3 {
+    text-align: center;
+    position:relative;
+    bottom:-390px;
+    color: white;
+    font-size: 20px;
+}
+p4 {
+    position:relative;
+    bottom:100px;
+    left:120px
+}
+p5 {
+    position:relative;
+    bottom:100px;
+    left: 300px
+}
+p6 {
+    color: white;
+    letter-spacing: 2px;
+    font-size: 50px;
+    position:relative;
+    left: -315px;
+    bottom: 465px;
 }
